feat: добавить раздел Функции: определение и вызов

--- a/Вспомнить все.md
+++ b/Вспомнить все.md
@@ -340,3 +340,115 @@ do {
 ```
 
 Это гарантирует, что тело цикла выполнится хотя бы один раз, даже при невыполнении условия. 
+
+# Функции: определение и вызов
+
+Функция имеет имя и тело. Чтобы объявить функцию, пишут ключевое слово ```function```, имя функции с круглыми скобками, а затем — её тело внутри фигурных скобок:
+
+```
+function имяФункции() {
+  // тело функции
+} 
+```
+
+Чтобы тело функции выполнилось, функцию нужно вызывать. Для этого пишут её имя и затем ставят круглые скобки:
+
+```
+consoleKitten();
+```
+
+## Параметры функции
+
+**Параметры — переменные**, которыми может пользоваться только сама функция. 
+В коде тела функции прописываются действия с ними, как с обычными переменными.
+Объявим функцию ```keepScore```, которая сообщает итог матча. Она принимает два параметра — ```ours``` и ```theirs```. Это число голов, забитое «нашими» и соперником.
+
+```
+function keepScore(ours, theirs) {
+    // Проверим, забили наши больше голов или нет:
+  if (ours > theirs) {
+        console.log('Выиграли! 😃 Счёт ' + ours + ':' + theirs);
+
+    // Если наши забили не больше голов,
+    // то может столько же? Проверим:
+  } else if (ours === theirs) {
+        console.log('Ничья. 😐 Счёт ' + ours + ':' + theirs);
+
+    // Если два предыдущих условия не выполнены,
+    // стало быть, наши забили меньше голов :(
+  } else {
+        console.log('Продули... 😢 Счёт ' + ours + ':' + theirs);
+    }
+} 
+```
+
+Результат матча можно указать прямо в коде вызова:
+
+```
+keepScore(10, 8);
+// функция keepScore подставит вместо переменной ours значение 10,
+// а вместо theirs — значение 8. Затем выполнит все проверки и выдаст результат:
+// 'Выиграли! 😃 Счёт 10:8' 
+```
+
+При вызове функции можно передать ей как параметры значения переменных. Для этого параметры перечисляют внутри круглых скобок при вызове:
+
+```
+let a = 10; 
+let b = 8;
+
+keepScore(a, b); 
+```
+
+## Возвращаемое значение
+
+Возвращаемые значения указывает оператор **return**:
+
+```
+function sayHello(name) {
+    // Преобразуем входные данные
+  let greeting = 'Привет, ' + name;
+    // Возвращаем результат
+  return greeting;    
+}
+
+let alisaGreeting = sayHello('Алиса');
+
+console.log(alisaGreeting); // "Привет, Алиса" 
+```
+
+## Как прервать работу функции
+
+Директива ```return``` означает выход из функции. В теле функции код ниже строки с оператором return не исполняется:
+
+```
+function sayHello(name) {    
+  let greeting = 'Привет, ' + name;    
+  return greeting;
+
+  // этот код не выполнится,
+  // так как он после return    
+  console.log(greeting);
+} 
+```
+
+А ```return``` без значения просто говорит функции «хватит»:
+
+```
+function sayHello(name) {
+  if (name === '') {
+    return; // если имя — пустая строка, выйдем из функции
+  }
+
+  let greeting = 'Привет, ' + name;    
+  return greeting;
+}
+```
+
+Если передать такой функции пустую строку, она прекратит работу. Функция при этом вернёт специальное значение **undefined**:
+
+```
+let emptyGreeting = sayHello('');
+
+console.log(emptyGreeting); // undefined 
+```
