--- a/Вспомнить все.md
+++ b/Вспомнить все.md
@@ -463,3 +463,39 @@ let emptyGreeting = sayHello('');
 
 console.log(emptyGreeting); // undefined 
 ```
+
+
+# Объекты
+
+Объекты состоят из пар **«ключ — значение»**. Пары **«ключ — значение»** часто называют полями. 
+
+**Значение** — это данные, которые мы хотим записать. Значением может быть строка, число, булево значение, массив, другой объект или функция. **Ключ** — это уникальное имя этого значения. Ключ играет ту же роль, что и имя переменной. По нему мы можем обратиться к значению.
+
+Создадим объект ```myObject``` с четырьмя ключами:
+
+```javascript
+let myObject = {
+    stringKey: 'значение', // это свойство
+    numberKey: 4, // это тоже свойство
+    booleanKey: true, // и это свойство
+  methodKey: function consoleKitten() { // а вот это метод
+        console.log('kitten!');
+    }
+}; 
+```
+
+Пары **«ключ — значение»** делятся на два типа: **свойства** и **методы**.
+Если значение представляет собой функцию, такую пару называют **методом**.
+Если значение — строка, число, булево значение, массив или объект, такую пару называют **свойством**.
+
+Чтобы получить доступ к **свойству**, его имя записывают через точку после имени объекта:
+
+```javascript
+myObject.stringKey; 
+```
+
+Другой способ обратиться к **свойству** — указать имя свойства в кавычках и в квадратных скобках:
+
+```javascript
+myObject['numberKey']; 
+```
