--- a/3. Introduction in DOM.md
+++ b/3. Introduction in DOM.md
@@ -176,3 +176,184 @@ bigAndRed.removeAttribute('disabled'); // удаляем атрибут
 bigAndRed.hasAttribute('disabled'); // false 
 ```
 
+---
+
+# Работа с атрибутами через встроенные свойства
+
+Когда мы хотим работать с элементом на странице, сначала нужно сделать из него объект: ведь JS умеет работать только с объектами. При этом атрибуты тега становятся свойствами объекта:
+
+```js
+<!-- Задаём тегу a атрибут href -->
+<a href="https://ya.ru">Поиск</a> 
+```
+
+```js
+// Выбираем элемент a
+let a = document.querySelector('a');
+
+a.href; // https://ya.ru — у элемента a появилось свойство href 
+```
+
+В этом и заключается управление атрибутами через свойство объекта. Их можно не только получать, но и перезаписывать:
+
+```js
+a.href = 'https://praktikum.yandex.ru/' 
+```
+
+---
+
+# Манипуляции с классами CSS
+
+## Получение имени класса. Свойство ```className```
+
+У каждого элемента **DOM** есть свойство ```className```. С его помощью можно прочитать или записать значение атрибута ```class```:
+
+```js
+<div class="princess">Елизавета</div> 
+```
+
+```js
+// выбираем элемент c классом 'princess'
+let rank = document.querySelector('.princess');
+console.log(rank.className); // princess
+
+rank.className = 'queen'; // принцесса стала королевой, перезаписываем класс на 'queen'
+console.log(rank.className); // queen 
+```
+
+Если у элемента несколько классов, в свойстве ```className``` они будут разделены пробелами:
+
+```js
+<div class="her majesty queen">Елизавета</div> 
+```
+
+```js
+// выбираем элемент c классом 'queen'
+let rank = document.querySelector('.queen');
+
+console.log(rank.className); // her majesty queen 
+```
+
+## Получение списка классов. Свойство ```classList```
+
+Для управления атрибутом ```class``` удобнее пользоваться свойством ```classList```. Оно содержит список всех классов элемента и обладает собственными методами, чтобы управлять этими классами.
+
+```js
+<!-- В именах классов записаны марки машин Её Величества -->
+<div class="bentley rolls-royce">Королевский гараж</div> 
+```
+
+```js
+/* получаем список машин королевы в переменной,
+обратившись к соответствующему элементу с селектором .bentley */
+
+let garage = document.querySelector('.bentley');
+console.log(`Гараж Её Величества: ${garage.classList}`); // Гараж Её Величества: bentley rolls-royce 
+```
+
+## Проверка наличия класса. Метод ```contains```
+
+Метод ```contains``` проверяет, есть ли у элемента класс, переданный как аргумент:
+
+```js
+let garage = document.querySelector('.bentley');
+
+garage.classList.contains('bentley'); // true — bentley есть
+garage.classList.contains('jaguar'); // false — а jaguar нет 
+```
+
+## Присвоение класса элементу. Метод ```add```
+
+Метод ```add``` добавляет элементу класс:
+
+```js
+// в королевский гараж поступил Ягуар
+garage.classList.add('jaguar');
+
+console.log(`Гараж Её Величества: ${garage.classList}`); // bentley rolls-royce jaguar 
+```
+
+## Удаление класса. Метод ```remove```
+
+Метод ```remove``` удаляет у элемента класс, переданный как аргумент:
+
+```js
+garage.classList.remove('jaguar'); // Ягуар надоел
+
+console.log(`Гараж Её Величества: ${garage.classList}`); // bentley rolls-royce 
+```
+
+## Переключение класса. Метод ```toggle```
+
+Метод ```toggle``` работает как ```add```, если у элемента класс отсутствует, и как ```remove``` — если присутствует. То есть метод переключает класс у элемента:
+
+```js
+<div class="bentley rolls-royce jaguar">Королевский гараж</div> 
+```
+
+```js
+// А если Ягуар есть, нужно от него избавиться  
+garage.classList.toggle('jaguar');
+
+console.log(`Гараж Её Величества: ${garage.classList}`); // bentley rolls-royce 
+```
+
+---
+
+# Управление содержимым: свойства ```.innerHTML``` и ```.textContent```
+
+Чтобы получить содержимое тега, используют свойства ```innerHTML``` и ```textContent```.
+
+## Содержимое элемента. Свойство innerHTML
+
+Свойство ```innerHTML``` содержит в себе строку со всем наполнением элемента (в том числе и разметкой):
+
+```js
+document.body.innerHTML; // Если в документе нет разметки, вернёт пустую строку. 
+```
+
+```innerHTML``` позволяет не только получить значение свойства, но и перезаписать его:
+
+```js
+document.body.innerHTML = '<div>Добавим разметку</div>'; // Теперь на странице есть только один div. Если бы перед этим в документе была какая-либо разметка, она была бы заменена этим одним div. 
+```
+
+## Текстовое содержимое. Свойство ```textContent```
+```textContent``` позволяет получить или перезаписать текстовое содержимое элемента. Обратите внимание: вёрстка при этом не затрагивается.
+ 
+```js
+<p id="paragraph">Это текст внутри элемента.</p> 
+```
+
+```js
+let paragraph = document.getElementById('paragraph');
+console.log(paragraph.textContent); // "Это текст внутри элемента."
+paragraph.textContent = 'А это новый текст.'; // можно перезаписать содержимое 
+```
+
+## Другой способ заменить текстовое содержимое. Свойство ```innerText```
+
+Есть ещё одно свойство — ```innerText```, которое тоже предназначено для получения текстового содержимого. Оно отличается от textContent тем, что ```innerText``` возвращает только видимое текстовое содержимое. То есть ```innerText``` проигнорирует всё, что скрыто свойством ```display: none```, а ```textContent``` — нет:
+
+```js
+<p id="paragraph">
+  Это текст внутри элемента.
+  <span style="display: none;">Невидимый текст.</span>
+</p>
+```
+
+```js
+let paragraph = document.getElementById('paragraph');
+
+console.log(paragraph.innerText); // Это текст внутри элемента.
+console.log(paragraph.textContent);
+/* Это текст внутри элемента.
+Невидимый текст. */
+```
+
+Когда нужно прочитать или изменить текстовое содержимое, лучше обращаться к ```textContent```. На это есть две причины:
+
+* ```textContent``` работает гораздо быстрее, потому что игнорирует правила видимости.
+* Свойство ```innerText``` не стандартизировано. Его придумали в Microsoft ещё до появления ```textContent```. Оно стало популярным, и другие производители начали внедрять его в свои браузеры. Но в стандарте ```innerText``` по-прежнему нет, а значит, его поведение в разных браузерах может отличаться. А ещё нет гарантий, что оно не изменится в будущем.
+
+Запомнить стоит два свойства: ```innerHTML``` и ```textContent```. **Первое** пригодится для управления разметкой, **второе** — текстовым содержимым.
