feat: завершить все темы урока

--- a/3. Introduction in DOM.md
+++ b/3. Introduction in DOM.md
@@ -357,3 +357,142 @@ console.log(paragraph.textContent);
 * Свойство ```innerText``` не стандартизировано. Его придумали в Microsoft ещё до появления ```textContent```. Оно стало популярным, и другие производители начали внедрять его в свои браузеры. Но в стандарте ```innerText``` по-прежнему нет, а значит, его поведение в разных браузерах может отличаться. А ещё нет гарантий, что оно не изменится в будущем.
 
 Запомнить стоит два свойства: ```innerHTML``` и ```textContent```. **Первое** пригодится для управления разметкой, **второе** — текстовым содержимым.
+
+---
+
+# Реакция на действия пользователя. События
+
+Основные и наиболее распространённые события:
+
+* ```'click'``` — клик по элементу;
+* ```'mouseover'``` — пользователь навёл указатель мыши на элемент;
+* ```'mouseout'``` — пользователь убрал указатель мыши с элемента;
+* ```'scroll'``` — пользователь прокручивает элемент.
+
+Универсальный способ отслеживания и реакции на событие — метод ```addEventListener```:
+
+```js
+element.addEventListener(eventName, handler); 
+```
+
+```element``` — элемент, которому добавляем слушатель.
+```eventName``` — событие, на которое нужно отреагировать. Передаётся строкой: ```'click'```, ```'scroll'```, ```'mouseover'```.
+```handler``` — функция-обработчик события. Она будет вызвана, когда событие сработает (например, произойдёт клик).
+
+При клике по элементу ```element``` запускается обработчик ```showClick```, который выведет сообщение в консоль:
+
+```js
+let element = document.querySelector('.my-element');
+
+function showClick() {
+  console.log('Мы кликнули по элементу');
+}
+
+element.addEventListener('click', showClick); 
+```
+
+Другой способ записи удобен, если вы не собираетесь вызывать функцию в других блоках кода:
+
+```js
+let element = document.querySelector('.my-element');
+
+element.addEventListener('click', function () {
+  console.log('Мы кликнули по элементу');
+}); 
+```
+
+Здесь код функции-обработчика событий написан полностью внутри вызова метода ```addEventListener```. В таких случаях обработчику можно не давать имени.
+
+## Событие отправки формы — ```submit```
+
+Этот слушатель добавляется на элемент формы:
+
+```js
+<form class='form'>
+    <input class='form__input' type='text'>
+    <button class='form__button' type='submit'>
+        Сохранить
+    </button>
+</form> 
+```
+
+```js
+let formElement = document.querySelector('.form');
+
+formElement.addEventListener('submit', function () {
+    console.log('Форма отправлена');
+});
+```
+
+---
+
+# Гибкая вставка: методы ```insertAdjacentHTML``` и ```insertAdjacentText```
+
+Чтобы не терять данные в элементах, существуют методы ```insertAdjacentHTML``` и ```insertAdjacentText```. Они добавляют разметку и текст в документ и не затрагивают существующие элементы.
+
+Добавим тигра в зоопарк свойством insertAdjacentHTML:
+
+```js
+zoo.insertAdjacentHTML('beforeend', '<div class="tiger"></div>');
+```
+
+Значение ```'beforeend'``` указывает, что мы вставили HTML-код перед закрывающим тегом элемента. Возможны также значения:
+
+* ```'beforebegin'``` — вставка до открывающего тега;
+* ```'afterbegin'``` — вставка после открывающего тега;
+* ```'afterend'``` — вставка после закрывающего тега.
+
+Относительно разметки блока это выглядит так:
+
+```js
+<!-- beforebegin -->
+<div>
+    <!-- afterbegin -->
+    
+    <!-- существующая разметка-->
+    
+    <!-- beforeend -->
+</div>
+<!-- afterend --> 
+```
+
+Свойство ```insertAdjacentText``` работает аналогичным образом, только вставляет текст, как и свойство ```textContent```.
+
+---
+
+# Другие полезные свойства элементов
+
+## Значение поля ввода. Свойство value
+
+Одно из самых популярных свойств — ```value```, оно есть у всех элементов ```input```. Это свойство содержит значение поля ввода.
+
+```js
+/* script.js */
+
+let inputs = document.querySelectorAll('input');
+
+console.log(inputs[0].value); // "Ты опоздала"
+console.log(inputs[1].value); // "Игорь Тальков"
+```
+
+## Состояние чекбокса и радиокнопки. Свойство ```checked```
+
+Это свойство есть только у чекбоксов и радиокнопок. Оно содержит ```true```, если чекбокс отмечен, и ```false``` — если нет.
+
+## Свойства и методы элемента. Метод ```console.dir```
+
+Запомнить все специфичные свойства элементов — непростая задача. Например, у ссылок есть свойство ```href```, у картинок — ```src```. Подобных свойств ещё много. Но зубрить их не нужно: есть универсальный способ узнать, какие свойства есть у элемента и что в них содержится.
+
+Метод ```console.log``` неудобен при работе с DOM-элементами. Если передать ему элемент, в консоль будет выведена разметка:
+
+```js
+console.log(document.body); // <body></body> 
+```
+
+Это неудобно, когда мы хотим просмотреть свойства элемента. Наше спасение — метод ```console.dir```, от английского **directory, «каталог»**:
+
+```js
+console.dir(document.body); 
+```
+
+```console.dir``` отобразит список свойств и методов переданного объекта. Используйте его, если не знаете или не помните свойства элемента.
