feat: завершить 5ю тему

--- a/5. Methods of working with data, conditions, cycles.md
+++ b/5. Methods of working with data, conditions, cycles.md
@@ -305,3 +305,352 @@ Boolean([]); //true
 
 ---
 
+# Логические операторы
+
+Логических операторов всего три:
+
+* ``!`` — логическое **НЕ**,
+* ``||`` — логическое **ИЛИ**,
+* ``&&`` — логическое **И**.
+
+# Оператор логическое НЕ (!)
+
+Логическое **НЕ** делает из условия обратное: превращает ``true`` в ``false`` и наоборот. Для этого перед условием ставят восклицательный знак ``!``:
+
+```js
+!false; // true
+```
+
+Было условие «если три больше двух» — станет «если три НЕ больше двух»:
+
+```js
+!(3 > 2) === 3 <= 2; // true.
+
+/* Потому что это превращается в проверку false === false */ 
+```
+
+Напишем функцию проверки пароля:
+
+```js
+let password = 'JavaScript';
+
+function checkPassword(pass) {
+    if (!(pass === password)) {
+        console.log('Неверный пароль');
+        return;
+    }
+
+    console.log('Пароль правильный');
+}
+
+checkPassword('java script'); // 'Неверный пароль'
+checkPassword('JavaScript'); // 'Пароль правильный'
+```
+
+Если поставить ``!`` перед небулевым значением, движок JS сначала приведёт тип к булю, а затем изменит значение на противоположное:
+
+```js
+!'Непустая строка' // false 
+```
+
+Двойное отрицание сработает как перевод значения в логический тип:
+
+```js
+!!true; // true
+!!'непустая строка'; // true
+!!''; // false
+!!1; // true
+!!0; // false 
+```
+
+Оператором **НЕ** можно создавать анти-условия и приводить данные к булю. 
+
+# Оператор логическое **ИЛИ (||)**
+
+Логическое **ИЛИ** служит для связи таких условий, из которых должно быть выполнено хотя бы одно. Для этого между простыми условиями ставят два прямых слеша ``||``:
+
+```js
+true || false || false; // true
+
+/* Оператору ИЛИ достаточно, чтобы хотя бы
+одно простое условие было истинным */ 
+```
+
+Оператор **ИЛИ** идёт по простым условиям слева направо и проверяет каждое. Когда он встречает правдивое значение, то возвращает его как результат всего условия. Посмотрим на примере:
+
+```js
+let condition =  0 || NaN || 'строка' || false;
+
+/* Значение переменной condition: 'строка'. */ 
+```
+
+В переменную ``condition`` записывается результат — значение первого истинного условия.
+
+## Значение по умолчанию
+
+Часто оператором ИЛИ присваивают переменной значение по умолчанию:
+
+```js
+function howDoYouDo(answer) {
+    const result = answer || 'да ничего';
+    return result;
+}
+
+howDoYouDo('всё прекрасно'); // "всё прекрасно"
+howDoYouDo(); // "да ничего" 
+```
+
+Пока вы не передаёте аргумент функции ``howDoYouDo``, её вызов возвращает установленное по умолчанию значение **'да ничего'**. Это происходит из-за того, что оператор ``ИЛИ`` из пустоты и чего-нибудь определённого выбирает определённое.
+
+# Оператор логическое **И (&&)**
+
+Логическим **И** объединяют условия, которые должны выполняться одновременно. Для этого между условиями ставят двойной амперсанд ``&&``:
+
+```js
+(distance <= 100000) && (ownersNumber === 1) 
+```
+
+Если поставить ``&&`` между правдивыми условиями, оператор вернёт последнее из них:
+
+```js
+2 * 2 === 4 && 5 < 6 && 'Каждый может стать' // 'Каждый может стать' 
+```
+
+Если среди условий есть ложные, ``&&`` вернёт из них первое ложное:
+
+```js
+2 * 2 === 4 && undefined && 'Каждый может стать' // undefined 
+```
+
+## Приоритетность операторов
+
+Cначала выполняется логическое **НЕ**, потом **И**, а затем — **ИЛИ**:
+
+```js
+const optimism = !'Жить' && !'Быть' || 'Жить и быть'; 
+
+console.log(optimism); // "Жить и быть"
+
+/* сначала выполняется !, потом &&, затем || */
+```
+
+Сначала ``!'Жить'`` → ``false``, потом ``!'Быть'`` → ``false``, затем ``false && false`` → ``false`` и наконец ``false || 'Жить и быть'`` → ``'Жить и быть'``.
+
+Операции в скобках выполняются первыми:
+
+```js
+const pessimism = !'Жить' && (!'Быть' || 'Жить и быть'); 
+
+console.log(pessimism); // false 
+```
+
+## Пример с автомобилем
+
+В исходном примере получился такой код:
+
+```js
+function checkTheCar (distance, ownersNumber, crushed, cost) {
+    if (distance <= 100000) { // проверяем пробег
+        if (ownersNumber === 1) { // 1 владелец по ПТС?
+            if (crushed === false) { // не битая?
+                if (cost <= 1000000) { // стоит меньше миллиона?
+                    return true; 
+                } else return false;
+            } else return false;
+        }
+        else if (ownersNumber === 2) { // владелец не 1? Тогда, может, 2?
+            if (crushed === false) { // не битая?
+                if (cost <= 1000000) { // стоит меньше миллиона?
+                    return true;
+                } else return false;
+            } else return false
+        } else return false;
+    } else return false;
+}
+
+checkTheCar(50000, 2, false, 700000); // true. Надо же! Работает. 
+```
+
+С логическими операторами вы можете переписать этот кошмар.
+
+Условия покупки машины:
+
+* пробег не больше 100 тысяч км,
+* один или два владельца по ПТС,
+* не битая,
+* не дороже миллиона.
+
+Пишем код:
+
+```js
+function checkTheCar (distance, ownersNumber, crushed, price) {
+    const condition = distance <= 100000 && (ownersNumber === 1 || ownersNumber === 2) && !crushed && price <= 1000000;
+    return condition;
+}
+
+checkTheCar(50000, 2, false, 700000); // true — фух, работает
+```
+
+---
+
+# Конструкция switch-case
+
+Оператор switch применяют, когда в условии только один ответ правильный. Каждый вариант описывают между ключевым словом case и инструкцией break:
+
+```js
+switch (/* Переменная для проверки */) {
+    case /* Первое возможное значение:
+        Выполняемый код */
+        break;
+    case /* Второе возможное значение:
+        Выполняемый код */
+        break;
+    ...
+    case /* n-ое возможное значение:
+        Выполняемый код */
+        break
+}
+```
+
+Каждый раз case завершается ``break``: так движок JS понимает, что из конструкции ``switch-case`` нужно выйти.
+Если не поставить ``break``, сработает код не только «нужного» ``case``, но и всех под ним:
+
+```js
+const yourNumber = 'Л055';
+let windowNumber;
+
+switch (yourNumber) {
+  case 'Л054':
+    windowNumber = 1;
+  case 'Л055':
+    windowNumber = 2;
+  case 'Л056':
+    windowNumber = 3;
+  case 'Л057':
+    windowNumber = 4;
+  case 'Л058':
+    windowNumber = 5;
+}
+
+console.log(windowNumber); // 5
+```
+
+Поэтому для последнего ``case`` писать ``break`` не нужно.
+
+Можно сознательно пропустить break, чтобы прописать логику сразу нескольких случаев:
+
+```js
+let catName;
+const cartoon = 'Зима в Простоквашино';
+
+switch (cartoon) {
+    case 'Зима в Простоквашино':
+    case 'Весна в Простоквашино':
+    case 'Трое из Простоквашино':
+        catName = 'Матроскин';
+        break;
+    case 'Лето кота Леопольда':
+        catName = 'Леопольд';
+}
+
+console.log(catName); // "Матроскин"
+```
+
+Ещё есть необязательная инструкция default. Сюда записывают код, который должен сработать, если ни один case не подошёл:
+
+```js
+let catName;
+const cartoon = 'Лето кота Леопольда';
+
+switch (cartoon) {
+    case 'Зима в Простоквашино':
+        catName = 'Матроскин';
+        break;
+    default:
+        catName = 'Леопольд';
+}
+
+console.log(catName); // "Леопольд" 
+```
+
+---
+
+# Тернарный оператор
+
+Конструкции ``if-else`` и ``switch-case`` слишком громоздкие для небольшого кода. Тут нужен тернарный оператор. Он состоит из условия и двух значений: первое вернётся, если результат проверки ``true``, второе — если ``false``.
+
+Конструкция с тернарным оператором состоит из условия и двух значений:
+
+```js
+/* условие */ ? /* значение, если true */ : /* значение, если false */
+```
+
+Такая конструкция возвращает первое значение, если условие — ``true``, и второе, если ``false``.
+
+Обычно тернарный оператор используют, когда в зависимости от условия нужно записать в переменную разные значения:
+
+```js
+const a = 5;
+const b = a > 10 ? 5 : 0;
+
+console.log(b); // 0, потому что a > 10 — false 
+```
+
+Главное отличие — **тернарный оператор** возвращает значение, а условная конструкция — нет.
+
+Используйте **тернарный оператор**, когда результат зависит от какого-нибудь логического выражения:
+
+```js
+const value = 'любит';
+
+console.log(value === 'любит' ? 'к сердцу прижмёт' : 'к чёрту пошлёт');
+
+// "к сердцу прижмёт" 
+```
+
+---
+
+# Циклы. Директивы **break** и **continue**
+
+## Остановка цикла. Директива ``break``
+
+Директива ``break`` останавливает цикл:
+
+```js
+for (let i = 2019; i < 2119; i++) {
+    if (i % 4 === 0 && i % 100 !== 0) { // високосный год кратен 4, но не кратен 100
+        console.log('Ближайший високосный год: ' + i);
+        break;
+    }
+}
+
+// 'Ближайший високосный год: 2020' 
+```
+
+Директива ``break`` нужна, когда дальнейшее выполнение цикла бессмысленно или может привести к неправильным результатам.
+
+Если из примера убрать ``break``, в консоль будут выведены все високосные годы от 2020 до 2116 и каждый с пояснением, что это ближайший високосный год.
+
+Обратите внимание на ``i++`` в примере. Такая запись называется инкремент и означает «прибавь к переменной i единицу». Выражение ``i--`` вычтет единицу из ``i``. Это декремент.
+
+## Прерывание итерации цикла. Директива ``continue``
+
+Директива ``continue`` не прерывает весь цикл, а только пропускает текущую итерацию.
+
+Так мы можем настроить, какие итерации выполнять, а какие нет:
+
+```js
+for (let i = 2090; i < 2110; i++) {
+  if (i % 4 === 0) {
+    if (i % 100 === 0) continue; // пропуск года, кратного 100
+    console.log('Високосный год: ' + i);
+  }
+}
+
+// Високосный год: 2092
+// Високосный год: 2096
+// Високосный год: 2104
+// Високосный год: 2108
+
+/* Скрипт вывел все високосные годы от 2090 до 2110, но пропустил год 2100 */
+```
